🎨 Overflow fixes

--- a/client/src/components/cards/ProviderCard.scss
+++ b/client/src/components/cards/ProviderCard.scss
@@ -7,6 +7,7 @@
   text-decoration: none;
   display: flex;
   flex-flow: row nowrap;
+  overflow: hidden;
 
   .ProviderCard__Left {
     width: 2em;
@@ -17,14 +18,22 @@
     align-items: center;
     background: var(--brand-colour);
     font-size: 2em;
+    flex: 0 0 auto;
   }
 
   .ProviderCard__Center {
-    flex: 1;
+    flex: 1 1 auto;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     padding: 1em;
+    overflow: hidden;
+
+    p {
+      margin: 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   .ProviderCard__Right {
@@ -32,5 +41,6 @@
     flex-flow: column nowrap;
     justify-content: center;
     padding: 1em;
+    flex: 0 0 auto;
   }
 }
